# anon_proxy

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  PR_BODY.md  README.md  SECURITY.md  bench_replay.py  config.json.example  docker-compose.yml  docker-entrypoint.sh  presubmit.sh  pyproject.toml  test_filter.py  test_mask.py
.github/workflows/: ci.yml  onnx-parity.yml
anon_proxy/: __init__.py  app_bundle.py  capture.py  cli.py  client_config.py  client_id.py  config.py  default_patterns.py  known_entities.py  mapping.py  masker.py  metrics.py  model_cache.py  policy.py  privacy_filter.py  regex_detector.py  registry.py  server.py  store_cli.py  system_prompt.py  tokens.py  upstream.py
anon_proxy/adapters/: _streaming.py  anthropic.py  openai.py
anon_proxy/menubar/: app.py  config.py  render.py  statusclient.py  supervisor.py  themes.py
scripts/: bench_masking.py  gen_dino_assets.py
tests/: conftest.py  test_adapter_anthropic.py  test_adapter_openai.py  test_adapter_streaming.py  test_app_bundle.py  test_backend_parity.py  test_cli.py  test_client_config.py  test_client_id.py  test_config.py  test_default_patterns.py  test_known_entities.py  test_mapping.py  test_masker.py  test_metrics.py  test_model_cache.py  test_packaging.py  test_policy.py  test_privacy_filter.py  test_proxy_instrumentation.py  test_regex_detector.py  test_registry.py  test_server.py  test_status_endpoint.py  test_store_cli.py  test_tokens.py
tests/menubar/: test_backend_forwarding.py  test_config.py  test_render.py  test_statusclient.py  test_supervisor.py  test_supervisor_defaults.py  test_themes.py  test_watch.py
