[project]
name = "anon-proxy"
version = "0.1.0"
description = "Local-first PII masking proxy for LLM APIs (Anthropic, OpenAI). Detects names, emails, phone numbers, addresses with the openai/privacy-filter model and rewrites them to stable placeholders before bytes leave your machine."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "anon-proxy contributors" },
]
keywords = [
    "privacy",
    "pii",
    "llm",
    "anthropic",
    "openai",
    "claude",
    "chatgpt",
    "proxy",
    "masking",
    "redaction",
    "data-protection",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: Proxy Servers",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "anthropic>=0.96.0",
    "httpx>=0.28.1",
    "openai>=2.35.1",
    "prompt-toolkit>=3.0.52",
    "starlette>=1.0.0",
    "torch>=2.11.0",
    "transformers>=5.6.0",
    "uvicorn[standard]>=0.45.0",
]

[project.urls]
Homepage = "https://github.com/KevinXuxuxu/anon_proxy"
Repository = "https://github.com/KevinXuxuxu/anon_proxy"
Issues = "https://github.com/KevinXuxuxu/anon_proxy/issues"

[project.scripts]
anon-proxy = "anon_proxy.server:main"
anon-proxy-store = "anon_proxy.store_cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
